[project]
name = "save-return"
version = "0.2.0"
description = "Save the return value of the decorated function to a versioned pickle file"
authors = [
    { name = "incomplete", email = "incomplete@aixon.co" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/qwfy/save_return"
Documentation = "https://github.com/qwfy/save_return"
Repository = "https://github.com/qwfy/save_return"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/save_return"]
